# logv

./: LICENSE  PKGBUILD  README.md  install.sh  pyproject.toml  requirements.txt
logv/: __init__.py  __main__.py  filters.py  highlighter.py  live.py  main.py  parser.py  timeline.py  tui.py  utils.py
packaging/: build_deb.sh
tests/: test_filters.py  test_live.py  test_parser.py  test_timeline.py
